# Base64

./: .gitignore  .kateproject  CMakeLists.txt  ReadMe.md  ReadMe.md.backup
include/: base64.h  base64config.h  base64config.h.in
lib/: .base64.c.kate-swp  base64.c
scratch/: sratc1  sratc1.c
src/: base64.c  base64e.c
test/: testfile.txt
